--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,20 @@ table {
 }
 
 .container {
-    border: 1px solid #555;
+    border: 3px solid #000;
     padding: 20px;
     margin: 10px;
+}
+
+.where-are-we-box {
+    position: relative;
+    left: -20px;
+    top: -20px;
+    background-color: #bbb;
+    padding: 10px 15px;
+    display: inline-block;
+}
+
+.bold {
+    font-weight: bold;
 }
