--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,13 @@ body {
     background-color: #222;
     color: #fff;
 }
+.footer {
+    padding: 20px;
+    margin: 33px;
+    text-align: right;
+    font-size: 11px;
+    opacity: 0.5;
+}
+.footer a {
+    color: #454545;
+}
